msi custom configuration

--- a/samples/MVC and Web API (JWT)/WebHost/WebHost.csproj
+++ b/samples/MVC and Web API (JWT)/WebHost/WebHost.csproj
@@ -221,8 +221,12 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="identityModel.config" />
-    <Content Include="identityModel.services.config" />
+    <Content Include="identityModel.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="identityModel.services.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -287,7 +291,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>25199</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
