--- a/samples/MVC and Web API (JWT)/WebHost/identityModel.config
+++ b/samples/MVC and Web API (JWT)/WebHost/identityModel.config
@@ -1,7 +1,7 @@
 ﻿<system.identityModel>
   <identityConfiguration>
     <audienceUris>
-      <add value="urn:mvcjwtrp" />
+      <add value="http://localhost:25199/" />
     </audienceUris>
 
     <securityTokenHandlers>
