--- a/samples/MVC and Web API (JWT)/WebHost/identityModel.services.config
+++ b/samples/MVC and Web API (JWT)/WebHost/identityModel.services.config
@@ -2,8 +2,8 @@
   <federationConfiguration>
 
     <wsFederation passiveRedirectEnabled="true"
-                  issuer="https://idsrv.local/issue/wsfed"
-                  realm="urn:mvcjwtrp" />
+                  issuer="https://localhost/issue/wsfed"
+                  realm="http://localhost:25199/" />
   </federationConfiguration>
   
 </system.identityModel.services>
