--- a/src/OnPremise/WebSite/Configuration/connectionStrings.config
+++ b/src/OnPremise/WebSite/Configuration/connectionStrings.config
@@ -21,6 +21,6 @@
 
   <!-- user database (SQLCE) -->
   <add name="ProviderDB"
-       connectionString="Data Source=|DataDirectory|\IdentityServerUsers.sdf"
-       providerName="System.Data.SqlServerCe.4.0" />
+       connectionString="Data Source=sql1dev.iss.local;Initial Catalog=MSIEnterprise;Integrated Security=True;Application Name=IdServ" 
+       providerName="System.Data.SqlClient" />
 </connectionStrings>
