--- a/src/OnPremise/WebSite/Configuration/profile.config
+++ b/src/OnPremise/WebSite/Configuration/profile.config
@@ -1,15 +1,10 @@
-﻿<profile automaticSaveEnabled="false"
-         defaultProvider="Profile">
+﻿<profile defaultProvider="SqlProfileProvider">
   <providers>
-      <add name="Profile"
-           type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-           connectionStringName="ProviderDB"
-           applicationName="/" />
-    </providers>
-  
-  <!-- properties that should get turned into claims go here -->
+    <clear />
+    <add name="SqlProfileProvider" connectionStringName="ProviderDB" applicationName="MSIEnterprise" type="System.Web.Profile.SqlProfileProvider" />
+  </providers>
   <properties>
     <add name="WebPage" />
     <add name="TwitterName" />
-   </properties>
+  </properties>
 </profile>
