various configuration changes
* Added QA Build Configuration
* Added slow cheetah
* Added transforms for various configuration points
* Pointed to new idserv configuration database

--- a/src/OnPremise/WebSite/Configuration/connectionStrings.config
+++ b/src/OnPremise/WebSite/Configuration/connectionStrings.config
@@ -1,11 +1,11 @@
 ﻿<connectionStrings>
   <!-- configuration data like endpoints, protocol config, relying parties etc... -->
-  <add name="IdentityServerConfiguration"
-       connectionString="Data Source=|DataDirectory|\IdentityServerConfiguration.sdf"
-       providerName="System.Data.SqlServerCe.4.0" />
   <!--<add name="IdentityServerConfiguration"
-       connectionString="server=localhost;database=IdentityServerConfiguration;trusted_connection=yes;"
-       providerName="System.Data.SqlClient" />-->
+       connectionString="Data Source=|DataDirectory|\IdentityServerConfiguration.sdf"
+       providerName="System.Data.SqlServerCe.4.0" />-->
+  <add name="IdentityServerConfiguration"
+       connectionString="Data Source=sql1dev.iss.local;Initial Catalog=IdentityServerConfiguration;Integrated Security=True;Application Name=IdServ"
+       providerName="System.Data.SqlClient" />
 
   <add name="SqlServer"
        connectionString="server=localhost;database=IdentityServerConfiguration;trusted_connection=yes;"
