--- a/src/OnPremise/WebSite/Configuration/identityServices.config
+++ b/src/OnPremise/WebSite/Configuration/identityServices.config
@@ -2,7 +2,7 @@
   
   <federationConfiguration>
     <cookieHandler name="idsrvauth" 
-                   requireSsl="true" />
+                   requireSsl="false" />
   </federationConfiguration>
 
 </system.identityModel.services>
