--- a/src/OnPremise/WebSite/packages.config
+++ b/src/OnPremise/WebSite/packages.config
@@ -26,6 +26,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="SlowCheetah" version="2.5.10.3" targetFramework="net45" />
   <package id="SqlServerCompact" version="4.0.8854.1" targetFramework="net45" />
   <package id="System.IdentityModel.Tokens.Jwt" version="1.0.0" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="3.4.1" targetFramework="net45" />
